fix bean resolution order, and add h2 dep